Cambio de Widget de Doctoralia
He cambiado el Widget de doctoralia a uno que no muestre opiniones.

--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
                             La terapia es un proceso basado en la confianza. Te ofrezco una <strong>primera sesión de 30 minutos sin coste</strong> para conocernos, valorar tu caso y ver si somos un buen equipo para trabajar juntos.
                         </p>
                     </div>
+
                     <div class="doctoralia-widget" style="margin-bottom: 3rem;">
-                        <a id="zl-url" class="zl-url" href="https://www.doctoralia.es/jorge-g-martin-forero/psicologo/madrid" rel="nofollow" data-zlw-doctor="jorge-g-martin-forero" data-zlw-type="big" data-zlw-opinion="true" data-zlw-hide-branding="true" data-zlw-saas-only="true" data-zlw-a11y-title="Widget de reserva de citas médicas">Jorge G. Martín-Forero - Doctoralia.es</a><script>!function($_x,_s,id){var js,fjs=$_x.getElementsByTagName(_s)[0];if(!$_x.getElementById(id)){js = $_x.createElement(_s);js.id = id;js.src = "//platform.docplanner.com/js/widget.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","zl-widget-s");</script>
+                        <a id="zl-url" class="zl-url" href="https://www.doctoralia.es/jorge-g-martin-forero/psicologo/madrid" rel="nofollow" data-zlw-doctor="jorge-g-martin-forero" data-zlw-type="big_with_calendar" data-zlw-opinion="false" data-zlw-hide-branding="true" data-zlw-saas-only="true" data-zlw-a11y-title="Widget de reserva de citas médicas">Jorge G. Martín-Forero - Doctoralia.es</a><script>!function($_x,_s,id){var js,fjs=$_x.getElementsByTagName(_s)[0];if(!$_x.getElementById(id)){js = $_x.createElement(_s);js.id = id;js.src = "//platform.docplanner.com/js/widget.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","zl-widget-s");</script>
                     </div>
-                    
                     <div class="info-contacto" style="line-height: 1.8;">
                         <p style="margin-bottom: 1rem; font-size: 1.1rem;">
                             <i class="fas fa-phone" aria-hidden="true" style="margin-right: 10px;"></i>
