--- a/index.html
+++ b/index.html
@@ -264,11 +264,12 @@
         </div>
     </footer>
 
-   <a href="https://wa.me/34684799758text=Hola%2C%20he%20visto%20tu%20web%20y%20me%20gustar%C3%ADa%20informaci%C3%B3n%20sobre%20una%20primera%20cita%20gratuita." 
-  target="_blank">
-  WhatsApp
-</a>
-
+    <a href="https://wa.me/34684799758?text=Hola%2C%20he%20visto%20tu%20web%20y%20me%20gustar%C3%ADa%20informaci%C3%B3n%20sobre%20una%20primera%20cita%20gratuita." 
+       class="whatsapp-flotante" 
+       target="_blank" 
+       aria-label="Contactar por WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
 
   <div id="modal-historia" class="modal">
         <div class="modal-content">
