Paseo de Extremadura
He añadido Paseo de extremadura en la web dos veces en contacto y en el Header

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <header class="header">
         <div class="header-content container">
             <h1>Jorge Martín-Forero</h1>
-            <p>Psicólogo Sanitario en <strong>Puerta del Ángel</strong> | Terapia Presencial | Especialista en EMDR</p>
+            <p>Psicólogo Sanitario en <strong>Puerta del Ángel</strong> <strong>(Paseo de Extremadura)<strong> | Terapia Presencial | Especialista en EMDR</p>
         </div>
     </header>
 
@@ -293,7 +293,7 @@
                     </p>
                     <p style="font-size: 1.1rem; font-weight: 500;">
                         <i class="fas fa-map-marker-alt" aria-hidden="true" style="margin-right: 10px; color: var(--color-naranja-quemado);"></i>
-                        Calle de la Milagrosa, 4 (Barrio <strong>Puerta del Ángel</strong>), Latina, 28011 Madrid
+                        Calle de la Milagrosa, 4 (Barrio <strong>Puerta del Ángel/Paseo de Extremadura</strong>), Latina, 28011 Madrid
                     </p>
                 </div>
 
