--- a/index.html
+++ b/index.html
@@ -310,6 +310,14 @@
         </div>
     </footer>
 
+     <a href="#" class="calendly-flotante" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/jgm-forero-psico/primera-sesion-30-min'});return false;" aria-label="Reserva Gratis">
+    <img src="calendly-gratis.png" alt="¡GRATIS 30 MIN!">
+    </a>
+
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+
     <a href="https://wa.me/34684799758?text=Hola%2C%20he%20visto%20tu%20web%20y%20me%20gustar%C3%ADa%20informaci%C3%B3n%20sobre%20una%20primera%20cita%20gratuita." 
        class="whatsapp-flotante" 
        target="_blank" 
@@ -350,14 +358,5 @@
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
     <script type="text/javascript">
         window.onload = function() { 
-            Calendly.initBadgeWidget({ 
-                url: 'https://calendly.com/jgm-forero-psico/primera-sesion-30-min?hide_event_type_details=1&hide_gdpr_banner=1&background_color=f5f7f6&text_color=222222&primary_color=23ba7c', 
-                text: 'Programa reunión grauita de 30 min', 
-                color: '#CA3D11', 
-                textColor: '#FFFFFF', 
-                branding: false 
-            }); 
-        }
-    </script>
-</body>
+            
 </html>
