Modificación boton sesión gratis

--- a/index.html
+++ b/index.html
@@ -310,13 +310,10 @@
         </div>
     </footer>
 
-     <a href="#" class="calendly-flotante" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/jgm-forero-psico/primera-sesion-30-min'});return false;" aria-label="Reserva Gratis">
-    <img src="calendly-gratis.png" alt="¡GRATIS 30 MIN!">
+  <a href="#contacto" class="calendly-flotante" aria-label="Ir a Contacto y Reservar">
+        <span class="tooltip-texto">¡Primera sesión GRATIS!</span>
+        <i class="far fa-calendar-check" style="font-size: 26px; color: white;"></i>
     </a>
-
-<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-
-<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 
     <a href="https://wa.me/34684799758?text=Hola%2C%20he%20visto%20tu%20web%20y%20me%20gustar%C3%ADa%20informaci%C3%B3n%20sobre%20una%20primera%20cita%20gratuita." 
        class="whatsapp-flotante" 
@@ -355,8 +352,5 @@
 
     <script src="script.js"></script>
 
-    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-    <script type="text/javascript">
-        window.onload = function() { 
-            
+</body>
 </html>
