Nueva Sección Tarifas
He añadido la sección Tarifas a mi web

--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
                 <li><a href="#quien-soy">¿Quién soy?</a></li>
                 <li><a href="#especialidades">Especialidades</a></li>
                 <li><a href="#servicios">Servicios</a></li>
-                <li><a href="#testimonios">Testimonios</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#testimonios">Testimonios</a></li> <li><a href="#tarifas">Tarifas</a></li>         <li><a href="#contacto">Contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -259,6 +258,49 @@
                         <button class="carousel-indicator"></button>
                     </div>
                 </div>
+            </div>
+        </section>
+
+
+        <section id="tarifas" class="container seccion">
+            <h2>Tarifas</h2>
+            <div class="tarifas-grid">
+                
+                <div class="tarifa-card">
+                    <div class="tarifa-header">
+                        <h3>Primera Sesión</h3>
+                        <div class="precio">Gratuita</div>
+                        <div class="duracion"><i class="far fa-clock"></i> 30 minutos</div>
+                    </div>
+                    <div class="tarifa-body">
+                        <p>Un espacio inicial para conocernos, evaluar tu situación y ver cómo puedo ayudarte.</p>
+                        <ul class="tarifa-lista">
+                            <li><i class="fas fa-check"></i> Entrevista inicial</li>
+                            <li><i class="fas fa-check"></i> Valoración del caso</li>
+                            <li><i class="fas fa-check"></i> Sin compromiso</li>
+                        </ul>
+                        <a href="#contacto" class="btn btn-tarifa">Reservar Cita</a>
+                    </div>
+                </div>
+
+                <div class="tarifa-card destacado">
+                    <div class="etiqueta-destacada">Terapia</div>
+                    <div class="tarifa-header">
+                        <h3>Sesión de Psicología</h3>
+                        <div class="precio">60€</div>
+                        <div class="duracion"><i class="far fa-clock"></i> 50 minutos</div>
+                    </div>
+                    <div class="tarifa-body">
+                        <p>Intervención psicológica personalizada basada en tus objetivos y necesidades.</p>
+                        <ul class="tarifa-lista">
+                            <li><i class="fas fa-check"></i> Terapia Individual</li>
+                            <li><i class="fas fa-check"></i> Presencial u Online</li>
+                            <li><i class="fas fa-check"></i> Abordaje EMDR / Apego</li>
+                        </ul>
+                        <a href="#contacto" class="btn btn-tarifa btn-primary">Reservar Cita</a>
+                    </div>
+                </div>
+
             </div>
         </section>
 
