Cambio en los iconos de servicios alineamiento de botones
Cambio en los iconos de servicios alineamiento de botones

--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                     <span>Estrés financiero</span> 
                 </div>
                 <div class="servicio-item">
-                    <i class="fa-solid fa-sync-alt"></i>
-                    <span>Obsesiones</span>
+                    <i class="fa-solid fa-person-biking"></i>
+                    <span>Autocuidado</span>
                 </div>
                 <div class="servicio-item">
                     <i class="fa-solid fa-person-burst"></i>
@@ -192,8 +192,8 @@
                     <span>Duelo</span>
                 </div>
                 <div class="servicio-item">
-                    <i class="fa-solid fa-users"></i>
-                    <span>Acompañamiento Familiar</span>
+                    <i class="fa-solid fa-hands-holding-child"></i>
+                    <span>Crianza</span>
                 </div>
                 <div class="servicio-item">
                     <i class="fa-solid fa-shield-halved"></i>
